@@ -172,7 +172,10 @@ class Shell(gobject.GObject):
         home_model = self._model.get_home()
         activity = home_model.get_active_activity()
         if activity:
-            activity.get_service().TakeScreenshot()
+            try:
+                activity.get_service().TakeScreenshot(timeout=1.0)
+            except dbus.DBusException, e:
+                logging.debug('ignoring error raised by TakeScreenshot(): %s', e)
 
     def set_zoom_level(self, level):
         if level == self._zoom_level:
